--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3"
